fix for doctor share form spacing

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -766,14 +766,14 @@ button {
                             }
                         }
                         input[type="text"]{
-                            padding: 10px 10px;
+                            padding: 14px 15px;
                             margin: 0 2rem 2rem 0;
                             float: left;
                             width: 20%;
                             border: none;
-                            font-size: 1.4rem;
+                            font-size: 1.1rem;
                             top: 2px;
-                            min-width: 220px;
+                            min-width: 200px;
                         }
                     }
                     button {
@@ -2446,7 +2446,7 @@ h5.mobile-only {
                             margin-right: 1.5rem;
                         }
                         input[type="text"]{
-                            padding: 10px 20px;
+                            padding: 14px 20px;
                             margin: 0 2rem 1.5rem 0;
                             width: 100%;
                             max-width: 300px;
